kubernetes/apps/flux-target-updater/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-target-updater
  labels:
    app: flux-target-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux-target-updater
  template:
    metadata:
      labels:
        app: flux-target-updater
    spec:
      serviceAccountName: flux-target-updater
      containers:
        - name: app
          image: flux-target-updater
          ports:
            - containerPort: 8080
