kubernetes/apps/flux-target-updater/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-target-updater
spec:
  selector:
    app: flux-target-updater
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
